[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fireball/blue/keyframes/1.png" type="Texture" id=1]
[ext_resource path="res://Fireball/blue/keyframes/2.png" type="Texture" id=2]
[ext_resource path="res://Fireball/blue/keyframes/4.png" type="Texture" id=3]
[ext_resource path="res://Fireball/blue/keyframes/5.png" type="Texture" id=4]
[ext_resource path="res://Fireball/blue/keyframes/3.png" type="Texture" id=5]
[ext_resource path="res://Fireball/blue/keyframes/6.png" type="Texture" id=6]
[ext_resource path="res://Fireball.gd" type="Script" id=7]
[ext_resource path="res://FireballDamage.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 60.3599

[sub_resource type="CircleShape2D" id=3]
radius = 59.98

[node name="Fireball" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 16
collision_mask = 269
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Fireball" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"

[node name="fireball_collision" type="CollisionShape2D" parent="."]
position = Vector2( -192.822, 32.3136 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FireballDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireballDamage"]
position = Vector2( -193.375, 32.7755 )
shape = SubResource( 3 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="FireballDamage" to="FireballDamage" method="_on_FireballDamage_area_entered"]
